feat: Add data layer and relational schema

--- a/src/BoligmappaConsole/conf/appsettings.json
+++ b/src/BoligmappaConsole/conf/appsettings.json
@@ -1,5 +1,8 @@
 {
     "DummyAPI": {
       "endpoint": "https://dummyjson.com/"
+    },
+    "ConnectionStrings": {
+      "BoligmappaConnection":"host=host.docker.internal;port=5432;database=Boligmappa;username=admin;password=admin"
     }
 }
